cleanup, comments, typos